# yoto-uploader

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  yoto_uploader.py
debug_tools/: mitm_addon.py
yoto_uploader/: __init__.py  auth.py  cli.py  files.py  workflow.py
