[project]
name = "yoto-uploader"
version = "0.1.0"
description = "CLI to upload audio and randomize icons for Yoto My Cards"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "Javier Murillo" }
]

dependencies = [
  "playwright",
  "python-dotenv",
  "typer[all]",
]

[project.scripts]
yoto-uploader = "yoto_uploader.cli:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
