[metadata]
name = yoto-uploader
version = 0.1.0
description = CLI to upload audio and randomize icons for Yoto My Cards
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Javier Murillo

[options]
packages = find:
python_requires = >=3.11
install_requires =
    playwright
    python-dotenv
    typer[all]

[options.entry_points]
console_scripts =
    yoto-uploader = yoto_uploader.cli:main
